--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ng-blog": {
+    "clean-with-mat": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/ng-blog",
+            "outputPath": "dist/clean-with-mat",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -66,18 +66,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ng-blog:build"
+            "browserTarget": "clean-with-mat:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ng-blog:build:production"
+              "browserTarget": "clean-with-mat:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ng-blog:build"
+            "browserTarget": "clean-with-mat:build"
           }
         },
         "test": {
@@ -115,16 +115,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "ng-blog:serve"
+            "devServerTarget": "clean-with-mat:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "ng-blog:serve:production"
+              "devServerTarget": "clean-with-mat:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "ng-blog"
+  "defaultProject": "clean-with-mat"
 }
