--- a/package.json
+++ b/package.json
@@ -12,15 +12,14 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.13",
-    "@angular/cdk": "^11.2.12",
     "@angular/common": "~11.2.13",
     "@angular/compiler": "~11.2.13",
     "@angular/core": "~11.2.13",
     "@angular/forms": "~11.2.13",
-    "@angular/material": "^11.2.12",
     "@angular/platform-browser": "~11.2.13",
     "@angular/platform-browser-dynamic": "~11.2.13",
     "@angular/router": "~11.2.13",
+    "@ngrx/effects": "^11.1.1",
     "@ngrx/router-store": "^11.1.1",
     "@ngrx/store": "^11.1.1",
     "@ngrx/store-devtools": "^11.1.1",
@@ -42,6 +41,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "prettier": "^2.2.1",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
