--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "ng-blog",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
+    "ng run": "ng run",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
